# airway

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  config.py  config.yaml.example  docker-compose.yml  pyproject.toml  server.py
adapters/bisheng/: adapter.py  auth.py  client.py
airway/: __main__.py  config.py  db.py  errors.py  server.py
airway/adapters/: protocols.py
airway/adapters/bisheng/: auth.py  client.py  workflow.py
airway/migrations/: env.py
airway/migrations/versions/: 001_initial.py  002_add_password_hash.py
airway/models/: user_mapping.py
changes/airway-mvp/: design.md  proposal.md  tasks.md
docs/: 2026-05-31-clawith-bisheng-integration-design.md  2026-06-04-airway-mvp-design.md  comparison-methodology.md  comparison-report.md  openspec-guide.md  speckit-guide.md  superpowers-tutorial.md
docs/superpowers/plans/: 2026-06-05-airway-mcp-server.md  2026-06-07-mvp-hardening.md  2026-06-08-v2-workflow-tools.md
docs/superpowers/specs/: 2026-06-05-airway-mcp-server-design.md  2026-06-07-mvp-hardening-design.md  2026-06-08-v2-workflow-tools-design.md
openspec/specs/auth-bridge/: spec.md
openspec/specs/doc-upload/: spec.md
openspec/specs/mcp-server/: spec.md
openspec/specs/per-user-token/: spec.md
openspec/specs/qa-management/: spec.md
openspec/specs/rag-proxy/: spec.md
specs/001-airway-mcp-proxy/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-airway-mcp-proxy/checklists/: requirements.md
specs/001-airway-mcp-proxy/contracts/: mcp-tools.md
specs/002-user-mapping-workflow-rag/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/airway/: __init__.py  __main__.py  app.py  bisheng_client.py  config.py  rag_tools.py  server.py  settings.py
src/airway/auth/: jwt.py  (+1 more)
tests/: __init__.py  conftest.py  test_auth.py  test_bisheng_client.py  test_bisheng_client_new.py  test_client.py  test_config.py  test_integration.py  test_jwt.py  test_mcp_server.py  test_models.py  test_per_user_token.py  test_qa_tools.py  test_rag_tools.py  test_rag_tools_new.py  test_tools.py  test_workflow_tools.py
tests/fixtures/: bisheng_responses.py
tests/integration/: test_server.py
tests/unit/: test_adapter.py  test_auth.py  test_client.py  test_config.py  test_server.py  test_workflow.py
(+26 files in other folders)
