[project]
name = "airway"
version = "0.1.0"
description = "MCP Server bridging Clawith Agent and Bisheng RAG"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.4.0",
    "httpx>=0.28.0",
    "sqlmodel[asyncpg]>=0.0.22",
    "pydantic-settings>=2.7.0",
    "PyJWT>=2.10.0",
    "redis>=5.2.0",
    "cryptography>=44.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.35.0",
    "fakeredis>=2.26.0",
    "aiosqlite>=0.20.0",
]

[project.scripts]
airway = "airway.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/airway"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = "src"
