[project]
name = "airway"
version = "0.1.0"
description = "MCP proxy bridging Clawith Agent and Bisheng RAG"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "mcp>=1.0.0",
    "pydantic-settings>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
    "respx>=0.22.0",
]

[project.scripts]
airway = "airway.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/airway"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
